# DarkMatterK3-Home.github.io

./: .coverage  .firebaserc  .gitignore  .gitmodules  .nojekyll  AGORA_K3_T2_BRIDGE_PLAN.md  ALIXE_Discovery_Report.aux  ALIXE_Discovery_Report.out  ALIXE_Discovery_Report.tex  ALIXE_Discovery_Report.toc  ASSUMPTIONS.md  CLAUDE.md  CNAME  CORRECTION_NETRUNNER_FABRICATION.md  DATA_INTEGRITY_AUDIT.md  DERIVATION_DISPUTES.md  DarkEnergy_Amas_Certification.tex  DarkMatterK3_Halo_Detection_Validation.tex  DarkMatterK3_Phase3_Report.tex  DarkMatterK3_Supercluster_Validation.tex  DarkMatterK3_Supercluster_Validationv2.tex  EXECUTION_PLAN.md  EXPERIMENTATION_LAYER.md  EXTENDED_MONITORING_CONFIG.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY_DUAL_SCALE.md  ImplemenationPlanPhase1.md  K3_CRITERIA.md  LESSONS_LEARNED.md  LL.md  MEMORY.md  Makefile  NANOGrav_prediction.py  OBSERVATIONAL_REPORT.md  PHASE0_EXIT_CHECKLIST.md  PHASE2_QUICKSTART.md  PHASE4_COMPREHENSIVE_SUMMARY.md  PHASE4_EXECUTION_REPORT.md  PHASE4_EXECUTION_SUMMARY.md  PHASE4_FORMAL_REPORT.tex  (+126 more)
.devcontainer/: devcontainer.json
api/: .env.example  Dockerfile  api_dispatcher.py  requirements.txt  test_api_dispatcher.py
archives/: boinc_progress_report_20260707.md
briefs/: S2-01b.md  STREAM2_UNBLOCK_EXPECTATIONS.md  STREAM3_CHECKER_SUITE_REVIEW.md  STREAM_ALIGNMENT_C3_C3b.md
checkers/: check_C1_mirror_integrality.py  check_C3_sym2.py  check_C3b_moduli_map.py
core/: .env.example  daily_orchestrator.py  darkmatter-worker.service  requirements.txt  venv  (+4 more)
core_wasm/: Cargo.toml
core_wasm/src/: fft.rs  lib.rs
(+199 files in other folders)
