[package]
name = "core_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.1"
num-complex = "0.4"
wee_alloc = "0.4.5"

[profile.release]
opt-level = "s" # optimize for size
lto = true
codegen-units = 1
